--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="FlashNewsID - Berita Terkini tentang Artis, Atlet, Politik, dan Publik Figur Lainnya">
+    <meta name="description" content="FlashNewsID - Berita Terkini tentang Artis, Atlet, Politik, dan Publik Figur Lainnya.">
+    <meta name="keywords" content="berita, artis, atlet, politik, publik figur, berita viral">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="FlashNewsID - Berita Terkini dan Terpercaya">
+    <meta property="og:description" content="Dapatkan informasi terkini seputar artis, atlet, politik, dan publik figur lainnya hanya di FlashNewsID.">
+    <meta property="og:image" content="https://via.placeholder.com/600x315">
+    <meta property="og:url" content="https://flashnewsid.github.io/topik/">
     <title>FlashNewsID - Berita Artis, Atlet, Politik, & Publik Figur</title>
+    
+    <!-- Link untuk Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <style>
         /* Resetting margin and padding */
         * {
@@ -92,10 +102,10 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        .news-item img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
+        .news-item i {
+            font-size: 50px;
+            color: #007bff;
+            margin-bottom: 15px;
         }
 
         .news-item h3 {
@@ -153,25 +163,25 @@
             <h2>Berita Populer</h2>
             <div class="news-grid">
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/300" alt="Gambar Berita 1">
+                    <i class="fas fa-user-alt"></i>
                     <h3>Berita Artis Terkini</h3>
                     <p>Deskripsi singkat tentang berita artis yang sedang viral.</p>
                     <a href="#">Baca Selengkapnya</a>
                 </div>
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/300" alt="Gambar Berita 2">
+                    <i class="fas fa-trophy"></i>
                     <h3>Prestasi Atlet Terbaru</h3>
                     <p>Berita tentang atlet yang baru saja memenangkan kompetisi penting.</p>
                     <a href="#">Baca Selengkapnya</a>
                 </div>
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/300" alt="Gambar Berita 3">
+                    <i class="fas fa-gavel"></i>
                     <h3>Politik Terkini</h3>
                     <p>Berita terbaru seputar dunia politik dan pengaruhnya terhadap masyarakat.</p>
                     <a href="#">Baca Selengkapnya</a>
                 </div>
                 <div class="news-item">
-                    <img src="https://via.placeholder.com/300" alt="Gambar Berita 4">
+                    <i class="fas fa-users"></i>
                     <h3>Kehidupan Publik Figur</h3>
                     <p>Kabar terbaru tentang kehidupan pribadi publik figur yang sedang hangat diperbincangkan.</p>
                     <a href="#">Baca Selengkapnya</a>
