--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id">
+<html amp lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +9,15 @@
     <meta property="og:title" content="FlashNewsID - Berita Terkini dan Terpercaya">
     <meta property="og:description" content="Dapatkan informasi terkini seputar artis, atlet, politik, dan publik figur lainnya hanya di FlashNewsID.">
     <meta property="og:image" content="https://via.placeholder.com/600x315">
-    <meta property="og:url" content="https://flashnewsid.github.io/topik/">
+    <meta property="og:url" content="https://flashnewsid.github.io/topik">
     <title>FlashNewsID - Berita Artis, Atlet, Politik, & Publik Figur</title>
     
-    <!-- Link untuk Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- AMP Required Meta Tags -->
+    <script async src="https://cdn.ampproject.org/v0.js"></script>
+    <link rel="canonical" href="https://flashnewsid.github.io/topik">
 
-    <style>
+    <!-- AMP CSS -->
+    <style amp-custom>
         /* Resetting margin and padding */
         * {
             margin: 0;
@@ -134,66 +136,102 @@
             text-align: center;
             padding: 20px 0;
         }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .news-item i {
+                font-size: 40px;
+            }
+            .hero h2 {
+                font-size: 2rem;
+            }
+            .hero p {
+                font-size: 1rem;
+            }
+            header h1 {
+                font-size: 2rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .news-item i {
+                font-size: 30px;
+            }
+            .hero h2 {
+                font-size: 1.8rem;
+            }
+            header h1 {
+                font-size: 1.8rem;
+            }
+            nav ul li {
+                display: block;
+                margin: 10px 0;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>FlashNewsID</h1>
-            <nav>
-                <ul>
-                    <li><a href="#">Berita Artis</a></li>
-                    <li><a href="#">Berita Atlet</a></li>
-                    <li><a href="#">Berita Politik</a></li>
-                    <li><a href="#">Berita Publik Figur</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>FlashNewsID</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Berita Artis</a></li>
+                <li><a href="#">Berita Atlet</a></li>
+                <li><a href="#">Berita Politik</a></li>
+                <li><a href="#">Berita Publik Figur</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section class="hero">
-        <div class="container">
-            <h2>Berita Terkini, Terpercaya, dan Viral</h2>
-            <p>Ikuti kabar terbaru tentang artis, atlet, politik, dan publik figur lainnya hanya di FlashNewsID.</p>
-        </div>
+        <h2>Berita Terkini, Terpercaya, dan Viral</h2>
+        <p>Ikuti kabar terbaru tentang artis, atlet, politik, dan publik figur lainnya hanya di FlashNewsID.</p>
     </section>
 
     <section class="content">
-        <div class="container">
-            <h2>Berita Populer</h2>
-            <div class="news-grid">
-                <div class="news-item">
-                    <i class="fas fa-user-alt"></i>
-                    <h3>Berita Artis Terkini</h3>
-                    <p>Deskripsi singkat tentang berita artis yang sedang viral.</p>
-                    <a href="#">Baca Selengkapnya</a>
-                </div>
-                <div class="news-item">
-                    <i class="fas fa-trophy"></i>
-                    <h3>Prestasi Atlet Terbaru</h3>
-                    <p>Berita tentang atlet yang baru saja memenangkan kompetisi penting.</p>
-                    <a href="#">Baca Selengkapnya</a>
-                </div>
-                <div class="news-item">
-                    <i class="fas fa-gavel"></i>
-                    <h3>Politik Terkini</h3>
-                    <p>Berita terbaru seputar dunia politik dan pengaruhnya terhadap masyarakat.</p>
-                    <a href="#">Baca Selengkapnya</a>
-                </div>
-                <div class="news-item">
-                    <i class="fas fa-users"></i>
-                    <h3>Kehidupan Publik Figur</h3>
-                    <p>Kabar terbaru tentang kehidupan pribadi publik figur yang sedang hangat diperbincangkan.</p>
-                    <a href="#">Baca Selengkapnya</a>
-                </div>
+        <h2>Berita Populer</h2>
+        <div class="news-grid">
+            <div class="news-item">
+                <i class="fas fa-user-alt"></i>
+                <h3>Berita Artis Terkini</h3>
+                <p>Deskripsi singkat tentang berita artis yang sedang viral.</p>
+                <a href="#">Baca Selengkapnya</a>
+            </div>
+            <div class="news-item">
+                <i class="fas fa-trophy"></i>
+                <h3>Prestasi Atlet Terbaru</h3>
+                <p>Berita tentang atlet yang baru saja memenangkan kompetisi penting.</p>
+                <a href="#">Baca Selengkapnya</a>
+            </div>
+            <div class="news-item">
+                <i class="fas fa-gavel"></i>
+                <h3>Politik Terkini</h3>
+                <p>Berita terbaru seputar dunia politik dan pengaruhnya terhadap masyarakat.</p>
+                <a href="#">Baca Selengkapnya</a>
+            </div>
+            <div class="news-item">
+                <i class="fas fa-users"></i>
+                <h3>Kehidupan Publik Figur</h3>
+                <p>Kabar terbaru tentang kehidupan pribadi publik figur yang sedang hangat diperbincangkan.</p>
+                <a href="#">Baca Selengkapnya</a>
+            </div>
+            <div class="news-item">
+                <i class="fas fa-user-secret"></i>
+                <h3>Kontroversi Artis</h3>
+                <p>Terungkapnya kontroversi terbaru yang melibatkan selebriti papan atas.</p>
+                <a href="#">Baca Selengkapnya</a>
+            </div>
+            <div class="news-item">
+                <i class="fas fa-heart"></i>
+                <h3>Hubungan Cinta Publik Figur</h3>
+                <p>Kisah romantis dan hubungan cinta yang menarik perhatian publik.</p>
+                <a href="#">Baca Selengkapnya</a>
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2025 FlashNewsID. Semua Hak Cipta Dilindungi.</p>
-        </div>
+        <p>&copy; 2025 FlashNewsID. Semua Hak Cipta Dilindungi.</p>
     </footer>
 </body>
 </html>
