--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html amp lang="id">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +11,9 @@
     <meta property="og:image" content="https://via.placeholder.com/600x315">
     <meta property="og:url" content="https://flashnewsid.github.io/topik">
     <title>FlashNewsID - Berita Artis, Atlet, Politik, & Publik Figur</title>
-    
-    <!-- AMP Required Meta Tags -->
-    <script async src="https://cdn.ampproject.org/v0.js"></script>
-    <link rel="canonical" href="https://flashnewsid.github.io/topik">
 
-    <!-- AMP CSS -->
-    <style amp-custom>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <style>
         /* Resetting margin and padding */
         * {
             margin: 0;
