--- a/scatter-merah-jackpot-andi.html
+++ b/scatter-merah-jackpot-andi.html
@@ -228,8 +228,8 @@
             </div>
           </div>
           <div class='button-wrapper'>
-            <a href='https://t.ly/flashnewsid' rel = "nofollow" class='btn-secondary'>Login</a>
-            <a href='https://t.ly/flashnewsid' rel = "nofollow" class='btn-primary'>Daftar</a>
+            <a href='https://t.ly/luffytaro' rel = "nofollow" class='btn-secondary'>Login</a>
+            <a href='https://t.ly/luffytaro' rel = "nofollow" class='btn-primary'>Daftar</a>
           </div>
         </div>
       <br>
@@ -249,12 +249,12 @@
         <section class='n-container m-b-normal'>
       <div class="btn-body">
         <div class="btn-items">
-          <a href="https://t.ly/flashnewsid" rel="nofollow noreferrer" target="_blank">
+          <a href="https://t.ly/luffytaro" rel="nofollow noreferrer" target="_blank">
             <amp-img src="https://imagizer.imageshack.com/img923/5038/ELhVZo.png" width="150" height="70" alt="Daftar BelutWin" layout="fixed"></amp-img>
           </a>
         </div>
         <div class="btn-items">
-          <a href="https://t.ly/flashnewsid" rel="nofollow noreferrer" target="_blank">
+          <a href="https://t.ly/luffytaro" rel="nofollow noreferrer" target="_blank">
             <amp-img src="https://imagizer.imageshack.com/img923/8727/Toyw5b.png" width="150" height="70" alt="Login MpoTurbo" layout="fixed"></amp-img>
           </a>
         </div>
